# long-way-engine

./: .env.example  .gitignore  .task_cache.json  AGENTS.md  LOG.md  PROMPT.md  README.md  SPEC.md  STATUS.md  config.yaml  pyproject.toml  state.yaml  the-long-way.md
curriculum/: manifest.yaml  modules.yaml  syllabus.yaml
docs/: FORKING.md  index.html
reflection_templates/: annual.md  monthly.md  quarterly.md
reflections/: README.md
repopick/: README.md  SPEC.md  app.js
scripts/: migrate_syllabus.py  migrate_to_multi_syllabus.py  probe_completion.py  rebuild_cache.py  render_dashboard.py  show_timetable.py
specs/: remarkable-pdf-delivery.md
src/: cache.py  clock.py  config.py  curriculum_validator.py  dashboard.py  ids.py  main.py  reflections.py  scheduler.py  state.py  state_mutations.py  state_review.py  streaks.py  syllabus.py  templates.py  todoist.py  todoist_review.py  tracks.py
state/: long-way.yaml  shared.yaml
task_templates/: annual.yaml  daily.yaml  monthly.yaml  practices.yaml  quarterly.yaml  weekly.yaml
tests/: conftest.py  test_cache.py  test_clock.py  test_config.py  test_curriculum_validator.py  test_dashboard.py  test_examples.py  test_golden.py  test_ids.py  test_main.py  test_main_cli.py  test_migrate_to_multi_syllabus.py  test_multi_syllabus_config.py  test_rebuild_cache.py  test_reflections.py  test_render_dashboard.py  test_scheduler.py  test_scheduler_gates.py  test_shared_state.py  test_show_timetable.py  test_state.py  test_state_derive.py  test_state_mutations.py  test_state_review.py  test_streaks.py  test_syllabus.py  (+6 more)
(+76 files in other folders)
